syntax = "proto3";

package elwin;

service Elwin {
	rpc GetNamespaces(Identifier) returns (Experiments) {}
}

message Identifier {
	string teamID = 1;
	string userID = 2;
}

message Experiments {
	map<string, Experiment> experiments = 1;
}

message Experiment {
	repeated Param params = 1;
}

message Param {
	string key = 1;
	string value = 2;
}
